--- a/app/src/main/res/layout/activity_display_slider.xml
+++ b/app/src/main/res/layout/activity_display_slider.xml
@@ -16,7 +16,8 @@
         android:layout_marginEnd="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:max = "100"/>
 
     <TextView
         android:id="@+id/displayCurrentValue"
