--- a/app/src/main/res/layout/activity_display_slider.xml
+++ b/app/src/main/res/layout/activity_display_slider.xml
@@ -17,7 +17,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:max = "100"/>
+        android:max = "100"
+        android:progress = "50"/>
 
     <TextView
         android:id="@+id/displayCurrentValue"
