--- a/app/src/main/res/layout/activity_display_dropdown2.xml
+++ b/app/src/main/res/layout/activity_display_dropdown2.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".DisplayDropdownActivity">
 
+    <Spinner
+        android:id="@+id/spinner_dropdown"
+        android:layout_width="190dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="249dp"
+        android:contentDescription="@string/dropdown_description"
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
