--- a/app/src/main/res/layout/activity_display_slider.xml
+++ b/app/src/main/res/layout/activity_display_slider.xml
@@ -5,7 +5,7 @@
     android:id="@+id/currentValueText"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".display_sliderActivity">
+    tools:context=".displaySliderActivity">
 
     <SeekBar
         android:id="@+id/first_seekBar"
